@@ -19,6 +19,7 @@
 package org.mycore.common;
 
 import java.io.IOException;
+import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.Collections;
@@ -431,7 +432,7 @@ public class MCRMailer extends MCRServlet {
                 for (String part : mail.parts) {
                     messagePart = new MimeBodyPart();
 
-                    URL url = new URL(part);
+                    URL url = new URI(part).toURL();
                     DataSource source = new URLDataSource(url);
                     messagePart.setDataHandler(new DataHandler(source));
 
@@ -611,7 +612,7 @@ public class MCRMailer extends MCRServlet {
          * @see MCRMailer.EMail#buildAddress(String)
          */
         private static Optional<List<InternetAddress>> buildAddressList(final List<String> addresses) {
-            return addresses != null ? Optional.ofNullable(addresses.stream().map(address -> {
+            return addresses != null ? Optional.of(addresses.stream().map(address -> {
                 try {
                     return buildAddress(address);
                 } catch (Exception ex) {
@@ -626,7 +627,7 @@ public class MCRMailer extends MCRServlet {
          * @return the text message part
          */
         public Optional<MessagePart> getTextMessage() {
-            return msgParts != null ? Optional.ofNullable(msgParts).get().stream()
+            return msgParts != null ? Optional.of(msgParts).get().stream()
                 .filter(m -> m.type.equals(MessageType.TEXT)).findFirst() : Optional.empty();
         }
 
@@ -636,7 +637,7 @@ public class MCRMailer extends MCRServlet {
          * @return the HTML message part
          */
         public Optional<MessagePart> getHTMLMessage() {
-            return msgParts != null ? Optional.ofNullable(msgParts).get().stream()
+            return msgParts != null ? Optional.of(msgParts).get().stream()
                 .filter(m -> m.type.equals(MessageType.HTML)).findFirst() : Optional.empty();
         }
 
