@@ -19,7 +19,11 @@
 package org.mycore.mods.rss;
 
 import java.io.IOException;
-import java.net.URL;
+import java.io.InputStream;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 import java.text.MessageFormat;
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -158,10 +162,14 @@ public class MCRRSSFeedImporter {
         }
     }
 
-    private SyndFeed retrieveFeed() throws IOException, FeedException {
-        XmlReader feedReader = new XmlReader(new URL(feedURL));
-        SyndFeedInput input = new SyndFeedInput();
-        return input.build(feedReader);
+    private SyndFeed retrieveFeed() throws IOException, FeedException, InterruptedException {
+        HttpClient client = HttpClient.newHttpClient();
+        HttpRequest request = HttpRequest.newBuilder().uri(URI.create(feedURL)).build();
+        HttpResponse<InputStream> response = client.send(request, HttpResponse.BodyHandlers.ofInputStream());
+        try (InputStream resIS = response.body(); XmlReader feedReader = new XmlReader(resIS)) {
+            SyndFeedInput input = new SyndFeedInput();
+            return input.build(feedReader);
+        }
     }
 
     private MCRObject handleFeedEntry(SyndEntry entry, String projectID)
